name:                Mail
version:             0.1.0.0
synopsis:            A State based interface to sendmail
description:         This library was developed as an alternative to Network.Email.Sendmail from MissingH.
  It features a State based interface, and is used like sendmail $ do {from "example@example.com"; subject "message subject"; body "message text"}
license:             BSD3
license-file:        LICENSE
author:              Drew Gross
maintainer:          drew.a.gross@gmail.com
copyright:           Copyright (c) 2014 Drew Gross
category:            Network
build-type:          Simple
cabal-version:       >=1.10
stability:           Beta

library
  exposed-modules:     Mail
  build-depends:       base >= 4.6 && < 4.7,
                       containers >= 0.5.3.1,
                       mtl >= 2.1.2,
                       directory >= 1.2.0.1,
                       lens >= 3.10.1,
                       MissingH >= 1.2.0.2
  default-extensions:  TemplateHaskell
                       ScopedTypeVariables
  default-language:    Haskell2010